Attempt to fix css transition on iPhone
I added some -webkit snippets to css to attempt to fix my nav menu transition that is not executing correctly on mobile Chrome browser on iPhone. I believe the issue is related to transform origin because the transition is actually working, just not landing in the correct final position

--- a/css/styles.css
+++ b/css/styles.css
@@ -152,15 +152,15 @@ header {
 }
 
 .nav-button .bar {
-    transition:
+    -webkit-transition:
         y 300ms ease-in 300ms,
         rotate 300ms ease-in,
         opacity 0ms 300ms;
-    transform-origin: center;
+    -webkit-transform-origin: center;
 }
 
 .nav-button[aria-expanded="true"] .bar {
-    transition:
+    -webkit-transition:
         y 300ms ease-in,
         rotate 300ms ease-in 300ms,
         opacity 0ms 300ms;
@@ -395,7 +395,7 @@ header {
 
 .about-button-wrapper:hover {
     cursor: pointer;
-    transform: scale(1.3);
+    -webkit-transform: scale(1.3);
 }
 
 #pop-up-div {
@@ -564,7 +564,7 @@ form,
 
 .contact svg:hover,
 .contact svg:focus {
-    transform: rotate(30deg) scale(1.2);
+    -webkit-transform: rotate(30deg) scale(1.2);
 }
 
 .github, 
@@ -637,7 +637,7 @@ textarea {
 }
 
 #send-button:hover {
-    transform: scale(1.3);
+    -webkit-transform: scale(1.3);
 }
 
 /* ============================================================================================================
@@ -705,7 +705,7 @@ textarea {
     background-color: var(--white);
     border-radius: 5px;
     padding: 3px 15px;
-    transition: all .25s ease-out;
+    -webkit-transition: all .25s ease-out;
     text-underline-offset: 2px;
 }
 
@@ -713,7 +713,7 @@ textarea {
 .project-photo a:focus {
     color: var(--white);
     background-color: var(--dark-green);
-    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
     border: none;
     text-decoration: none;
 }
@@ -733,8 +733,8 @@ textarea {
 	align-items: center;
 	background: rgba(0, 0, 0, .8); 
     opacity: 0;
-    transition-property: opacity;
-    transition-duration: .5s;
+    -webkit-transition-property: opacity;
+    -webkit-transition-duration: .5s;
     overflow: hidden;
     font-family: 'Fira Sans Condensed', sans-serif;
     text-transform: uppercase;
